Changelog
=========

1.6 - Unreleased
----------------


1.5 - 2012-07-11
----------------

- Restore Python 2.5 compatibility.
  [stefan]

1.4 - 2011-11-25
----------------

- Warn if ``~/.viewdoc`` has errors instead of raising an exception.
  [stefan]

1.3 - 2011-10-31
----------------

- Be more careful with what we put on the PYTHONPATH.
  [stefan]

- Add ``small`` style to the default config.
  [stefan]

1.2 - 2011-07-19
----------------

- Pass the PYTHONPATH to subprocesses.
  [stefan]

- Avoid temp file when extracting the long description.
  [stefan]

- Add -l option to list available styles.
  [stefan]

- Add --*style* shortcut for -s *style*.
  [stefan]

1.1 - 2011-02-08
----------------

- Add -s option to select styles on the command line.
  [stefan]

- In ``pypi`` style, only underline reference links.
  [stefan]

1.0 - 2010-12-30
----------------

- Initial release
  [stefan]
