@@ -14,8 +14,9 @@ setup(name='jarn.viewdoc',
           'License :: OSI Approved :: BSD License',
           'Operating System :: OS Independent',
           'Programming Language :: Python :: 2',
+          'Programming Language :: Python :: 3',
       ],
-      keywords='view rest docs',
+      keywords='view rest package docs',
       author='Stefan H. Holek',
       author_email='stefan@epy.co.at',
       url='http://pypi.python.org/pypi/jarn.viewdoc',
@@ -31,4 +32,5 @@ setup(name='jarn.viewdoc',
       entry_points={
           'console_scripts': 'viewdoc=jarn.viewdoc.viewdoc:main',
       },
+      use_2to3=True,
 )
