@@ -4,6 +4,8 @@ Changelog
 1.6 - Unreleased
 ----------------
 
+- Add support for Python 3.1 - 3.3 thanks to distribute.
+  [stefan]
 
 1.5 - 2012-07-11
 ----------------
